syntax = "proto3";
option go_package = "github.com/alitari/mockgo-server/mockgo-grpc-kvstore/kvstore";

package kvstore;

service KVStore {
    rpc StoreVal( StoreValRequest) returns (StoreValResponse) {}
}

message StoreValRequest {
    string storage = 1;
    string key = 2;
    string value = 3;
}

message StoreValResponse {}
